--- a/16-sampling-nway.Rmd
+++ b/16-sampling-nway.Rmd
@@ -413,9 +413,9 @@ Comparison using $F$-ratio | $\frac{\frac{\sum (\bar{x_i}-\bar{\bar{x}})^2}{a-1}
 
 Preparation| Formula | Expected value | degrees of feedom |
 :--------------:|:--------------:|:------------------:|:---------------:|
-Estimated total variance | $\frac{\sum(\bar{x_i}-\bar{\bar{x}})^2}{b-1}$ |$\frac{\sigma_{people}^2}{nb} + \sigma_{B}^2$ | $(b-1) = 2$
+Estimated total variance | $\frac{\sum(\bar{x_i}-\bar{\bar{x}})^2}{b-1}$ |$\frac{\sigma_{people}^2}{na} + \sigma_{B}^2$ | $(b-1) = 2$
 Estimated variance sampling error | $\frac{s_{people}^2}{na} = ?$ |$\frac{\sigma_{people}^2}{na}$ | $ab(n-1) = 24$
-Comparison using $F$-ratio | $\frac{\frac{\sum (\bar{x_i}-\bar{\bar{x}})^2}{b-1}}{                  \frac{s_{people}^2}{na}}$ |  $\frac{\frac{\sigma_{people}^2}{na} + \sigma_{B}^2}{    \frac{\sigma_{people}^2}{nb}}$ | $[(b-1),ab(n-1)]=[2,24]$
+Comparison using $F$-ratio | $\frac{\frac{\sum (\bar{x_i}-\bar{\bar{x}})^2}{b-1}}{                  \frac{s_{people}^2}{na}}$ |  $\frac{\frac{\sigma_{people}^2}{na} + \sigma_{B}^2}{    \frac{\sigma_{people}^2}{na}}$ | $[(b-1),ab(n-1)]=[2,24]$
 
 
 ## Interaction variance
