--- a/16-sampling-nway.Rmd
+++ b/16-sampling-nway.Rmd
@@ -427,8 +427,21 @@ Comparison using $F$-ratio | $\frac{\frac{\sum (\bar{x_i}-\bar{\bar{x}})^2}{b-1}
 ### Variance of residual means
 
 
+### Juggling Typical
+
+  Juggling| Formula | Expected value | degrees of feedom |
+:--------------:|:--------------:|:------------------:|:---------------:|
+Sample size multiplied by estimated total variance| $\frac{nb\sum(\bar{x_i}-\bar{\bar{x}})^2}{a-1}$ |$\sigma_{people}^2 + nb \sigma_{A}^2$ | $(a-1) = 1$
+Estimated population variance | $s_{people}^2 =MSE= 60.0$ |$\sigma_{people}^2$ | $ab(n-1) = 24$
+Comparison using $F$-ratio | $\frac{\frac{nb\sum(\bar{x_i}-\bar{\bar{x}})^2}{a-1}}{s_{people}^2}$ | $\frac{\sigma_{people}^2 + nb \sigma_{A}^2}{\sigma_{people}^2}$ | $(a-1) = 1$      | $[(a-1),ab(n-1)]=[1,24]$
 
 
+### Preparation Typical
 
+  Juggling| Formula | Expected value | degrees of feedom |
+:--------------:|:--------------:|:------------------:|:---------------:|
+Sample size multiplied by estimated total variance| $\frac{nb\sum(\bar{x_i}-\bar{\bar{x}})^2}{b-1}$ |$\sigma_{people}^2 + na \sigma_{B}^2$ | $(b-1) = 2$
+Estimated population variance | $s_{people}^2 =MSE= 60.0$ |$\sigma_{people}^2$ | $ab(n-1) = 24$
+Comparison using $F$-ratio | $\frac{\frac{na\sum(\bar{x_i}-\bar{\bar{x}})^2}{b-1}}{s_{people}^2}$ | $\frac{\sigma_{people}^2 + na \sigma_{B}^2}{\sigma_{people}^2}$ | $(b-2) = 1$      | $[(b-1),ab(n-1)]=[2,24]$
 
 
