--- a/05-samples.Rmd
+++ b/05-samples.Rmd
@@ -80,17 +80,21 @@ We are interested in the sample mean ($\bar{x}$) to the extent that it provides 
 
 
 ```{r, echo = FALSE}
+options(pillar.sigfig = 6)
+
 pop_mean <- pop_data %>%
-  summarise(pop_mean = mean(height)) %>%
-  as.data.frame() %>% pull()
+  summarise(pop_mean = mean(height)) %>% 
+  pull()
 ```
 
 We can calculate the population mean for the height column of pop_data using the summarise() and mean() commands. The mean() command uses Formula \@ref(eq:popmeanch5). We see in the output that the population mean is 172.50 ($\mu = 172.50$).
 
 ```{r}
+options(pillar.sigfig = 6)
+
 pop_data %>%
-  summarise(pop_mean = mean(height)) %>%
-  as.data.frame()
+  summarise(pop_mean = mean(height)) 
+
 ```
 
 
@@ -178,9 +182,10 @@ Above, in Figure \@ref(fig:bothdist), we present a graph comparing the distribut
 Statisticians, recognizing the limitations of a single study, are not particularly concerned if a single sample mean deviates from the population mean. That said, statisticians are very concerned as to whether or not the results of a large number of studies are correct -- on average. That is, does the average of many sample means correspond to the population mean? If, on average, the sample mean does corresponds to the population mean, it is accurate and we refer to it as an unbiased estimator. Visually, this appears to be the case. But in the code below we confirm it numerically.
 
 ```{r}
+options(pillar.sigfig = 6)
+
 many_samples %>%
-  summarise(mean_of_sample_mean = mean(sample_mean)) %>%
-  as.data.frame()
+  summarise(mean_of_sample_mean = mean(sample_mean)) 
 ```
 
 We find that the average of the 50000 sample means is 172.47 which is very close to the population mean of 172.48. Note that when we did this, we used the same formula to calculate the sample mean (Formula \@ref(eq:samplemeanch5)) as we did the population mean (Formula \@ref(eq:popmeanch5)), although the notations differed. The average of the sample means was not identical to the population mean but it was very close - it would have been exactly the same with many more samples (i.e., an infinite number of samples). Therefore, we conclude the sample mean provides an unbiased estimate of the population mean. In other words, it makes sense to use the sample mean as an estimate of the population mean. If we try to estimate the population mean with a sample mean we will, on average, be correct; although any given sample/study mean might be "wrong".
@@ -198,9 +203,11 @@ We are interested in the sample variance ($s^2$) to the extent that it provides 
 We can calculate the population variance for the height column of pop_data using the summarise() and var.pop() commands. The var.pop() command uses Formula \@ref(eq:popvarch5). We see in the output that the population variance is 157.5 ($\sigma^2 = 157.5$).
 
 ```{r}
+options(pillar.sigfig = 6)
+
 pop_data %>%
-  summarise(pop_var = var.pop(height)) %>%
-  as.data.frame()
+  summarise(pop_var = var.pop(height)) 
+
 ```
 
 ### Assessing bias  
@@ -218,9 +225,10 @@ $$
 Estimates of the population variance are systematically too low when you use a sample variance formula with an $n$ in the denominator. We can see that this is true by examining the many_samples data. In these data, the column sample_var_n contains the variance for the sample calculated with the above formula. Below we use code to obtain the average of the sample_var_n column over the 50000 samples. If this average equals the population variance of 157.5 then variance, using $n$ in the denominator, is an unbiased estimator of the population variance.
 
 ```{r}
+options(pillar.sigfig = 6)
+
 many_samples %>%
-  summarise(mean_of_var_n = mean(sample_var_n)) %>%
-  as.data.frame()
+  summarise(mean_of_var_n = mean(sample_var_n)) 
 ```
 
 You can see the average of sample_var_n column (141.54) is much smaller than the population variance (157.5). That is, the average of the sample variances, using $n$ in the denominator, was smaller than the population variance. Consequently, sample variance (using $n$ in the denominator) provides a biased estimate of the population variance. If we try to estimate the population variance with sample variance (using $n$ in the denominator) we will, on average, be wrong.
@@ -235,9 +243,10 @@ s^2 = \frac{\sum{(x - \bar{x})^2}}{n-1}
 In the many_samples data, the column sample_var_n_1 was generated using Formula \@ref(eq:samplevarn1ch5). We can evaluate the quality of Formula \@ref(eq:samplevarn1ch5), using $n-1$, by averaging the values in the sample_var_n_1 column.
 
 ```{r}
+options(pillar.sigfig = 6)
+
 many_samples %>%
-  summarise(mean_of_var_n_1 = mean(sample_var_n_1)) %>%
-  as.data.frame()
+  summarise(mean_of_var_n_1 = mean(sample_var_n_1)) 
 ```
 
 We see that the average of the 50000 values using $n-1$ in the denominator is 157.27 which is very close to the population variance of 157.46. These numbers would have been identical with an infinite number of samples. Consequently, when we use $n-1$ in the denominator we have an unbiased estimate of the population variance. If we try to estimate the population variance with a sample variance, using $n-1$ in the denominator, we will, on average, be right.
