--- a/02-tidy_intro.Rmd
+++ b/02-tidy_intro.Rmd
@@ -189,7 +189,7 @@ Often this process does too much rounding. We can get more exact results changin
 
 ```{r}
 
-#NOTICE: We having increased the number of digits in the output
+#NOTICE: We have increased the number of digits in the output
 options(pillar.sigfig = 6)
 
 okcupid_profiles %>% 
